# vision_demos

./: .gitignore  README.md
test_libtorch/: .gitignore  README.md
test_libtorch/0helloworld/: CMakeLists.txt  example.cpp
test_libtorch/1simple/: CMakeLists.txt  example.cpp
test_libtorch/2customop/: customop.cpp  setup.py
test_libtorch/example1/: 1minimal_example.cpp  CMakeLists.txt
test_pointnet/: test.py  train_cls_pointnet.py  train_cls_pointnet1.py  train_cls_pointnet2_msg.py  train_cls_pointnet2_ssg.py  train_seg_pointnet1.py  tran_cls_pointnet.py  utils.py
test_pointnet/datasets/: modelnet40.py  shapenet.py
test_pointnet/models/: pointnet.py  pointnet2.py  pointnet2_cls.py  pointnet_cls.py  pointnet_seg.py
test_pointnet/test/: test.py  test_show_pcd.py  test_syspath.py
